# Object_Recognition_and_Alignment-ROS-PCL-RealSense

./: README.md  todo.txt
object_recognition/: CMakeLists.txt  package.xml
object_recognition/cfg/: cconfig.cfg  rconfig.cfg  save.yaml
object_recognition/launch/: ob_recognition.launch  reco.launch
object_recognition/msg/: FPFH.msg  FPFH_bundle.msg
object_recognition/src/: feature_to_reco.cpp  feature_to_reco.h  pcd_to_pointcloud.cpp  pcd_to_pointcloud.h
