<?xml version="1.0"?>
<package format="2">
  <name>object_recognition</name>
  <version>0.0.1</version>
  <description>Find a given object in a scene</description>

  <maintainer email="kai@kaifranke.com">Kai Franke</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>roslib</build_depend> 
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <!--<run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>  
	<run_depend>image_transport</run_depend>
	<run_depend>message_runtime</run_depend>    
  <run_depend>dynamic_reconfigure</run_depend>-->

  <build_export_depend>pcl</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rostime</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>  
	<build_export_depend>image_transport</build_export_depend>
	<build_export_depend>message_runtime</build_export_depend>    
  <build_export_depend>dynamic_reconfigure</build_export_depend>

  <exec_depend>pcl</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rostime</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
	<exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>  
	<exec_depend>image_transport</exec_depend>
	<exec_depend>message_runtime</exec_depend>    
  <exec_depend>dynamic_reconfigure</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
<build_export_depend>message_generation</build_export_depend>
</package>